--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "big-trip",
   "version": "19.0.0",
+  "homepage": "https://gerbertwest.github.io/2102773-big-trip-19/",
   "private": true,
   "description": "Проект «Большое путешествие» от HTML Academy",
   "browserslist": [
@@ -13,6 +14,8 @@
   "scripts": {
     "lint": "eslint src/",
     "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
@@ -23,6 +26,7 @@
     "css-loader": "6.7.3",
     "eslint": "8.28.0",
     "eslint-config-htmlacademy": "8.0.0",
+    "gh-pages": "^5.0.0",
     "style-loader": "3.3.1",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
